.provarCaches/00Df2000001KKNJEA4/objects/Incap311__External_Service_Request__c.object
<CustomObject>
    <fields>
        <fullName>Incap311__Service_Request__c</fullName>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>External Service Requests</relationshipLabel>
        <relationshipName>External_Service_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__System_Id__c</fullName>
        <label>System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__System_Name__c</fullName>
        <label>System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>External Service Request</label>
    <listViews>
        <fullName>Incap311__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ESR-{0000000000}</displayFormat>
        <label>External Service Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Service Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>